--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,26 +1,27 @@
 @charset "UTF-8";
 
 /******************************************/
-/*		IPC
+/*		DFocus
 /*			by DFocus AuTiMoThY
 /******************************************/
 /*
 * TOC
 *
-* -	_Initial
-* -	_Layout
-* -	btn
-* -	form input textarea
-* -	loading
-* -	Header
-* -	Footer
-* -	nav
-* -	banner
-* -	mod
-* -	AsideMod
-* -	page
-* -	font
-* -	icon
+* _Initial
+* _Layout
+* btn
+* form input textarea
+* loading
+* Header
+* Footer
+* nav
+* banner
+* mod
+* AsideMod
+* page
+* font
+* icon
+* skrollr
 */
 
 @import "_variable";
@@ -33,7 +34,8 @@
 @include establish-baseline;
 
 
-@include font-face("HelveticaNeueLTCom", font-files("HelveticaNeueLTCom-Th.ttf", "HelveticaNeueLTCom-Th.woff"));
+// @include font-face("HelveticaNeueLTCom", font-files("HelveticaNeueLTCom-Th.ttf", "HelveticaNeueLTCom-Th.woff"));
+@include font-face("FutuLt", font-files("FuturaBT-Light.eot", "FutuLt.ttf", "FutuLt.woff"));
 
 // @import _animate.sass
 /*------------------------------------------------------------------------*\
@@ -56,23 +58,23 @@
 /*========================================================================*\
 		>	btn
 \*========================================================================*/
-@import "module/_pageBtn";
+// @import "module/_pageBtn";
 @import "module/_btn";
 // @import "_materialBtn";
 
-/*------------------------------------------------------------------------*\
-/*------------------------------------------------------------------------*\
-/*========================================================================*\
-		>	form input textarea
-\*========================================================================*/
-@import "module/_formInputSelect";
-@import "module/_inputCheckbox";
+// /*------------------------------------------------------------------------*\
+// /*------------------------------------------------------------------------*\
+// /*========================================================================*\
+// 		>	form input textarea
+// \*========================================================================*/
+// @import "module/_formInputSelect";
+// @import "module/_inputCheckbox";
 
-/*------------------------------------------------------------------------*\
-/*------------------------------------------------------------------------*\
-/*========================================================================*\
-		>	loading
-\*========================================================================*/
+// /*------------------------------------------------------------------------*\
+// /*------------------------------------------------------------------------*\
+// /*========================================================================*\
+// 		>	loading
+// \*========================================================================*/
 // @import "module/_loading";
 
 /*------------------------------------------------------------------------*\
@@ -80,96 +82,47 @@
 /*========================================================================*\
 		>	Header
 \*========================================================================*/
-// @import "project/_Header";
+@import "project/_Header";
 
-/*------------------------------------------------------------------------*\
-/*------------------------------------------------------------------------*\
-/*========================================================================*\
-		>	Footer
-\*========================================================================*/
+// /*------------------------------------------------------------------------*\
+// /*------------------------------------------------------------------------*\
+// /*========================================================================*\
+// 		>	Footer
+// \*========================================================================*/
 // @import "project/_Footer";
 
-/*------------------------------------------------------------------------*\
-/*------------------------------------------------------------------------*\
-/*========================================================================*\
-		>	nav
-\*========================================================================*/
-$bdColor_G1: #289884;
-$bdColor_G2: #42c6b7;
-$bdColor_B1: #26a8e7;
-$bdColor_B2: #0c7db5;
-.nav-IPC {
-	&:first-of-type {
-		border-left: 1px solid $bdColor_B2;
-		@each $page, $bdColor_G1 in
-			(events_page, $bdColor_G1),
-			(events_page, $bdColor_G1) {
-			.#{$page} & {
-				border-left: 1px solid $bdColor_G1;
-			}
-		}
-	}
-	&:last-of-type {
-		border-right: 1px solid $bdColor_B1;
-		@each $page, $bdColor_G1 in
-			(events_page, $bdColor_G2),
-			(events_page, $bdColor_G2) {
-			.#{$page} & {
-				border-right: 1px solid $bdColor_G2;
-			}
-		}
-	}
-	a {
-		color: #fff;
-		padding: 0 1em;
-		border-left: 1px solid $bdColor_B1;
-		border-right: 1px solid $bdColor_B2;
-		@include transition(all 0.3s $easeInOutCubic);
-		@each $page, $bdColor_G1, $bdColor_G2 in
-			(events_page, $bdColor_G1, $bdColor_G2),
-			(events_page, $bdColor_G1, $bdColor_G2) {
-			.#{$page} & {
-				border-left: 1px solid $bdColor_G2;
-				border-right: 1px solid $bdColor_G1;
-			}
-		}
-	}
-	&:hover {
-		a {
-			color: $normal_color2;
-			text-shadow: -1px -1px 3px darken($normal_color2, 20%);
-		}
-	}
-}
-
-/*------------------------------------------------------------------------*\
-/*------------------------------------------------------------------------*\
-/*========================================================================*\
-		>	banner
-\*========================================================================*/
-.banner {
-	margin-top: 1px;
-}
-@import "_CAROUSEL";
+// /*------------------------------------------------------------------------*\
+// /*------------------------------------------------------------------------*\
+// /*========================================================================*\
+// 		>	nav
+// \*========================================================================*/
 
 
-/*------------------------------------------------------------------------*\
-/*------------------------------------------------------------------------*\
-/*========================================================================*\
-		>	mod
-\*========================================================================*/
-@import "module/_tabs";
-@import "module/_tag_vertical";
-
-@import "project/_MOD";
+// /*------------------------------------------------------------------------*\
+// /*------------------------------------------------------------------------*\
+// /*========================================================================*\
+// 		>	banner
+// \*========================================================================*/
+// @import "_CAROUSEL";
 
 
-/*------------------------------------------------------------------------*\
-/*------------------------------------------------------------------------*\
-/*========================================================================*\
-		>	AsideMod
-\*========================================================================*/
-@import "project/_AsideMod";
+// /*------------------------------------------------------------------------*\
+// /*------------------------------------------------------------------------*\
+// /*========================================================================*\
+// 		>	mod
+// \*========================================================================*/
+// @import "module/_tabs";
+// @import "module/_tag_vertical";
+
+// @import "project/_MOD";
+
+
+// /*------------------------------------------------------------------------*\
+// /*------------------------------------------------------------------------*\
+// /*========================================================================*\
+// 		>	AsideMod
+// \*========================================================================*/
+// @import "project/_AsideMod";
 
 
 /*------------------------------------------------------------------------*\
@@ -177,7 +130,8 @@ $bdColor_B2: #0c7db5;
 /*========================================================================*\
 		>	page
 \*========================================================================*/
-
+@import "project/_page_index";
+@import "project/_page_aboutContent";
 
 
 
@@ -186,106 +140,7 @@ $bdColor_B2: #0c7db5;
 /*========================================================================*\
 		>	font
 \*========================================================================*/
-.txt {
-	&-r {
-		color: #f20101;
-		font-size: 1.3em;
-		font-weight: bolder;
-	}
-	&-r1 {
-		color: #9c0000;
-	}
-	&-b {
-		color: $normal_color;
-	}
-	&-b1 {
-		color: #0067c0;
-	}
-	&-bk {
-		color: #221815;
-	}
-	&-bk1 {
-		color: #000;
-	}
-	&-new {
-		color: $normal_color;
-		font-size: 1.1em;
-		text-transform: uppercase;
-		text-shadow: none;
-	}
-	&-ora {
-		color: #ffac28;
-	}
-	&-ora1 {
-		color: #e67800;
-	}
-	&-ora2 {
-		color: #ed5800;
-		font-size: 1.3em;
-		font-weight: bold;
-	}
-	&-ora3 {
-		color: #ef6600;
-		text-decoration: underline;
-	}
-	&-ora4 {
-		color: #f16e00;
-		font-size: 1.3em;
-	}
-	&-Gr {
-		color: #a4a4a4;
-	}
-	&-Gr1 {
-		color: $Grey_color1;
-	}
-	&-m_inf {
-		color: #a60c4e;
-		font-weight: bold;
-	}
-	&-tableLink {
-		color: $Grey_color1;
-		&:hover {
-			font-weight: bolder;
-			color: $normal_color;
-		}
-	}
-}
-
-a {
-	&.txt {
-		&-Gr1 {
-			&:hover {
-				text-decoration: underline;
-			}
-		}
-		&-ora1 {
-			&:hover {
-				text-decoration: underline;
-			}
-		}
-	}
-}
-
-
-
-
-.fa-angle-left, .fa-angle-right {
-	color: #fff;
-	@include scale(1.1);
-}
-.fa-file-text-o {
-	color: $Grey_color1;
-	&:hover {
-		&:before{
-			display: block;
-			@include scale(1.3);
-		}
-		color: darken(#0079d4, 10%);
-		text-shadow: -1px -1px 0px $bd_color4;
-	}
-}
-
-
+@import "project/_FONT";
 
 /*------------------------------------------------------------------------*\
 /*------------------------------------------------------------------------*\
@@ -295,4 +150,7 @@ a {
 @import "module/_ICON";
 
 
-
+// /*========================================================================*\
+// 		>	skrollr
+// \*========================================================================*/
+// @import "_skrollrFixedPos";
