--- a/sass/style.scss
+++ b/sass/style.scss
@@ -130,8 +130,7 @@
 /*========================================================================*\
 		>	page
 \*========================================================================*/
-@import "project/_page_index";
-@import "project/_page_aboutContent";
+
 
 
 
@@ -140,14 +139,14 @@
 /*========================================================================*\
 		>	font
 \*========================================================================*/
-@import "project/_FONT";
+@import "project/_font";
 
 /*------------------------------------------------------------------------*\
 /*------------------------------------------------------------------------*\
 /*========================================================================*\
 		>	icon
 \*========================================================================*/
-@import "module/_ICON";
+@import "project/_ICON";
 
 
 // /*========================================================================*\
