- V9.0.0 -- add config.php - mixin v5.0.0
 Changes to be committed:
	new file:   config.php
	modified:   index.php
	modified:   sass/_mixin.scss
	modified:   sass/_variable.scss
	new file:   sass/function/_contains.scss
	new file:   sass/function/_is-length.scss

--- a/sass/_mixin.scss
+++ b/sass/_mixin.scss
@@ -1,7 +1,75 @@
+@charset "UTF-8";
+
 //------------------------------------*\
 //		AuTiMoThY
-//		V 4.0.3
+//		V 5.0.0
 //------------------------------------*/
+@import "function/contains";
+@import "function/is-length";
+////
+// A collection of function for advanced type checking
+// @author Hugo Giraudel
+////
+
+@function is-number($value) {
+  @return type-of($value) == 'number';
+}
+ 
+@function is-time($value) {
+  @return is-number($value) and index('ms' 's', unit($value)) != null;
+}
+ 
+@function is-duration($value) {
+  @return is-time($value);
+}
+ 
+@function is-angle($value) {
+  @return is-number($value) and index('deg' 'rad' 'grad' 'turn', unit($value)) != null;
+}
+ 
+@function is-frequency($value) {
+  @return is-number($value) and index('Hz' 'kHz', unit($value)) != null;
+}
+ 
+@function is-integer($value) {
+  @return is-number($value) and round($value) == $value;
+}
+ 
+@function is-relative-length($value) {
+  @return is-number($value) and index('em' 'ex' 'ch' 'rem' 'vw' 'vh' 'vmin' 'vmax', unit($value)) != null;
+}
+ 
+@function is-absolute-length($value) {
+  @return is-number($value) and index('cm' 'mm' 'in' 'px' 'pt' 'pc', unit($value)) != null;
+}
+ 
+@function is-percentage($value) {
+  @return is-number($value) and unit($value) == '%';
+}
+ 
+@function is-length-HG($value) {
+  @return is-relative-length($value) or is-absolute-length($value);
+}
+ 
+@function is-resolution($value) {
+  @return is-number($value) and index('dpi' 'dpcm' 'dppx', unit($value)) != null;
+}
+ 
+@function is-position($value) {
+  @return is-length-HG($value) or is-percentage($value) or index('top' 'right' 'bottom' 'left' 'center', $value) != null;
+}
+
+
+
+@function is-size($value) {
+  @return is-length($value)
+          or contains("fill" "fit-content" "min-content" "max-content", $value);
+}
+@function is-string($value) {
+	@return type-of($value) == "string";
+}
+
+
 @mixin wh($width:100%, $height:$width) {
 	@if type-of($width) == number {
 		@if (unitless($width)) {
@@ -18,8 +86,40 @@
 	} @else {
 		$name: $width;
 		$file: $height;
-		width: image-width("../images/#{$name}.#{$file}");
-		height: image-height("../images/#{$name}.#{$file}");
+		width: image-width("#{$name}.#{$file}");
+		height: image-height("#{$name}.#{$file}");
+	}
+}
+@mixin wh2($value:100%) {
+	$width: nth($value, 1);
+	$height: $width;
+
+	@if length($value) > 1 {
+		$height: nth($value, 2);
+	}
+
+	@if is-size($width) {
+		width: $width;
+	} @else if (not(is-string($width)) and unitless($width)) {
+		width: $width * 1px;
+	} @else {
+		@warn "`#{$width}`";
+	}
+
+	@if is-size($height) {
+		height: $height;
+	} @else if (not(is-string($height)) and unitless($height)) {
+		height: $height * 1px;
+	} @else {
+		@warn "`#{$height}`";
+	}
+
+
+	@if is-string($width) and is-string($height) {
+		$name: $width;
+		$file: $height;
+		width: image-width("#{$name}.#{$file}");
+		height: image-height("#{$name}.#{$file}");
 	}
 }
 @mixin bg($name, $bgpx:0, $bgpy:0, $repeat:no-repeat) {
@@ -29,35 +129,45 @@
 		//  background-position
 		$bgpxx: $name;
 		$bgpy: $bgpx;
+		@if (unitless($bgpxx)) {
+			$bgpxx: $bgpxx * 1px;
+		}
+		@if (unitless($bgpy)) {
+			$bgpy: $bgpy * 1px;
+		}
 		background-position: $bgpxx $bgpy;
-	} @else if type-of($name) == color {
+	}
+	@else if type-of($name) == color {
 		//  background-color
 		background-color: $name;
-	} @else if $name == "fixed" or $name == "scroll" {
+	}
+	@else if $name == "fixed" or $name == "scroll" {
 		$atta: $name;
 		background-attachment: $atta;
-	} @else if $name == "none"{
+	}
+	@else if $name == "none"{
 		background-image: none;
-	} @else {
+	}
+	@else {
 		background: image-url(#{$name}) $bgpx $bgpy $repeat;
 	}
 }
 @mixin bg-i($x:0, $y:0) {
-	@if (unitless($x)) {
-		$x: $x * 1px;
-	}
-	@if (unitless($y)) {
-		$y: $y * 1px;
-	}
+		@if (unitless($x)) {
+			$x: $x * 1px;
+		}
+		@if (unitless($y)) {
+			$y: $y * 1px;
+		}
 	@include bg('iconTxt.png', $x, $y);
 }
 @mixin bg-t($x:0, $y:0) {
-	@if (unitless($x)) {
-		$x: $x * 1px;
-	}
-	@if (unitless($y)) {
-		$y: $y * 1px;
-	}
+		@if (unitless($x)) {
+			$x: $x * 1px;
+		}
+		@if (unitless($y)) {
+			$y: $y * 1px;
+		}
 	@include bg('txts.png', $x, $y);
 }
 
@@ -108,6 +218,70 @@
 	padding-bottom: ($bgH / $bgW) * 100%;
 	@include bg('#{$bg}', 50%, 50%);
 	@include background-size(cover);
+}
+
+@function color($map, $keys...) {
+	@each $key in $keys {
+		$map: map-get($map, $key);
+	}
+
+	@return $map;
+	// @if $array == 'gr' {
+	// 	@if map-has-key($gray_colors, $key) {
+	// 		@return map-get($gray_colors, $key);
+	// 	}
+
+	// 	@warn "Unkown '#{$key}' in $gray_colors.";
+	// 	@return $key;
+		
+	// } @else if $array == 'nor' {
+	// 	@if map-has-key($normal_colors, $key) {
+	// 		@return map-get($normal_colors, $key);
+	// 	}
+
+	// 	@warn "Unkown '#{$key}' in $colors.";
+	// 	@return $key;
+	// } @else {
+	// 	@warn "Unkown '#{$array}'.";
+	// }
+
+}
+
+/// Shorthand mixin for offset positioning
+/// @param {String} $position - Either `relative`, `absolute` or `fixed`
+/// @param {Length} $top [null] - Top offset
+/// @param {Length} $right [null] - Right offset
+/// @param {Length} $bottom [null] - Bottom offset
+/// @param {Length} $left [null] - Left offset
+@mixin position($position, $t: null, $r: null, $b: null, $l: null) {
+  position: $position;
+  top: $t;
+  right: $r;
+  bottom: $b;
+  left: $l;
+}
+/// Shorthand mixin for absolute positioning
+/// Serves as an alias for `position(absolute, ...)`
+/// @param {Arglist} $args - Offsets
+/// @require {mixin} position
+@mixin absolute($args...) {
+  @include position(absolute, $args...);
+}
+
+/// Shorthand mixin for relative positioning
+/// Serves as an alias for `position(relative, ...)`
+/// @param {Arglist} $args - Offsets
+/// @require {mixin} position
+@mixin relative($args...) {
+  @include position(relative, $args...);
+}
+
+/// Shorthand mixin for fixed positioning
+/// Serves as an alias for `position(fixed, ...)`
+/// @param {Arglist} $args - Offsets
+/// @require {mixin} position
+@mixin fixed($args...) {
+  @include position(fixed, $args...);
 }
 
 //========================================================================*\
@@ -165,10 +339,13 @@
 	overflow: hidden;
 	display: block;
 }
-@mixin ellipsis() {
-	overflow:hidden;
-	white-space: nowrap;
-	text-overflow: ellipsis;
+@mixin ellipsis($width: 100%) {
+  display: inline-block;
+  max-width: $width;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  word-wrap: normal;
 }
 @mixin adjFont($to-size, $font-weight:normal, $lines: auto, $from-size: $base-font-size) {
 	@include adjust-font-size-to($to-size, $lines, $from-size);
