--- a/sass/_variable.scss
+++ b/sass/_variable.scss
@@ -10,19 +10,17 @@ $cnt_width: 1140px;
 
 $colors:(
 	nor: (
-		1 : #12377a,
-		2 : #e60012,
+		1 : #009ab2,
+		2 : #e9c636,
 		3 : #fdd209,
-		4 : #e67800,
-		5 : #af1355,
+		4 : #efd468,
+		5 : #d4b736,
 		6 : #18a482,
 		7 : #54d4d5,
-
+		font_c1: #006d7e,
+		font_c2: #2d8ea1,
 		logo_color1     : #6EB92B,
 		logo_color2     : #5C605D,
-
-		green           : #6fba2c,
-
 		hover_color     : #bc0021,
 		footer_color    : #585858
 	      ),
