--- a/sass/style.scss
+++ b/sass/style.scss
@@ -80,16 +80,12 @@
 /*------------------------------------------------------------------------*\
 /*------------------------------------------------------------------------*\
 /*========================================================================*\
-		>	Header
+		>	Header  Footer
 \*========================================================================*/
 @import "project/_Header";
+@import "project/_Footer";
 
-// /*------------------------------------------------------------------------*\
-// /*------------------------------------------------------------------------*\
-// /*========================================================================*\
-// 		>	Footer
-// \*========================================================================*/
-// @import "project/_Footer";
+
 
 // /*------------------------------------------------------------------------*\
 // /*------------------------------------------------------------------------*\
@@ -115,6 +111,7 @@
 // @import "module/_tag_vertical";
 
 // @import "project/_MOD";
+// @import "project/_code_mod";
 
 
 // /*------------------------------------------------------------------------*\
@@ -137,16 +134,20 @@
 /*------------------------------------------------------------------------*\
 /*------------------------------------------------------------------------*\
 /*========================================================================*\
-		>	font
+		>	font icon
 \*========================================================================*/
-@import "project/_font";
+@import "project/_FontIcon";
+
 
 /*------------------------------------------------------------------------*\
 /*------------------------------------------------------------------------*\
 /*========================================================================*\
-		>	icon
+		>	animation
 \*========================================================================*/
-@import "project/_ICON";
+@import "project/_AuAnimation";
+
+
+
 
 
 // /*========================================================================*\
