--- a/plugin/bootstrap-material-design/css/material.css
+++ b/plugin/bootstrap-material-design/css/material.css
@@ -2553,7 +2553,7 @@ Then, run this script to get the list.
   content: "\e8f5";
 }
 body {
-  background-color: #eeeeee;
+  /*background-color: #eeeeee;*/
 }
 body.inverse {
   background: #333333;
@@ -2592,7 +2592,7 @@ h6 {
 a,
 a:hover,
 a:focus {
-  color: #009688;
+  /*color: #009688;*/
 }
 body .well.well-sm,
 .container .well.well-sm,
@@ -2856,7 +2856,7 @@ body .jumbotron-material-blue-grey,
   background-color: #607d8b;
 }
 .btn {
-  position: relative;
+/*  position: relative;
   padding: 8px 30px;
   border: 0;
   margin: 10px 1px;
@@ -2866,7 +2866,7 @@ body .jumbotron-material-blue-grey,
   text-decoration: none;
   color: rgba(255, 255, 255, 0.84);
   transition: background-color 0.2s ease, box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
-  outline: none !important;
+  outline: none !important;*/
 }
 .btn:hover:not(.btn-link):not(.btn-flat):not(.btn-fab) {
   box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.12), 0 1px 6px 0 rgba(0, 0, 0, 0.12);
