--- a/sass/style.scss
+++ b/sass/style.scss
@@ -28,9 +28,21 @@
 @import "_mixin";
 // @import "_font.scss";
 @import "compass";
+@import "compass/css3";
 @import "ceaser-easing";
 
+/******************************************/
+/*		bootstrap grid system
+/******************************************/
+@import "bootstrap-compass";
+@import "_bootstrap-variables";
+@import "bootstrap/mixins";
+@import "bootstrap/grid";
+// @import "bootstrap";
 
+/******************************************/
+/*		css  START
+/******************************************/
 @include establish-baseline;
 
 
@@ -62,13 +74,13 @@
 @import "module/_btn";
 // @import "_materialBtn";
 
-// /*------------------------------------------------------------------------*\
-// /*------------------------------------------------------------------------*\
-// /*========================================================================*\
-// 		>	form input textarea
-// \*========================================================================*/
+/*------------------------------------------------------------------------*\
+/*------------------------------------------------------------------------*\
+/*========================================================================*\
+		>	form input textarea
+\*========================================================================*/
 // @import "module/_formInputSelect";
-// @import "module/_inputCheckbox";
+@import "module/_inputCheckbox";
 
 // /*------------------------------------------------------------------------*\
 // /*------------------------------------------------------------------------*\
@@ -80,12 +92,16 @@
 /*------------------------------------------------------------------------*\
 /*------------------------------------------------------------------------*\
 /*========================================================================*\
-		>	Header  Footer
+		>	Header
 \*========================================================================*/
 @import "project/_Header";
-@import "project/_Footer";
 
-
+// /*------------------------------------------------------------------------*\
+// /*------------------------------------------------------------------------*\
+// /*========================================================================*\
+// 		>	Footer
+// \*========================================================================*/
+// @import "project/_Footer";
 
 // /*------------------------------------------------------------------------*\
 // /*------------------------------------------------------------------------*\
@@ -111,8 +127,7 @@
 // @import "module/_tag_vertical";
 
 // @import "project/_MOD";
-// @import "project/_code_mod";
-
+// @import "module/_notifications";
 
 // /*------------------------------------------------------------------------*\
 // /*------------------------------------------------------------------------*\
@@ -127,7 +142,10 @@
 /*========================================================================*\
 		>	page
 \*========================================================================*/
-
+// @import "project/_page_index";
+// @import "project/_page_works";
+// @import "project/_page_aboutContent";
+// @import "project/_page_collaborate";
 
 
 
@@ -136,21 +154,15 @@
 /*========================================================================*\
 		>	font icon
 \*========================================================================*/
-@import "project/_FontIcon";
+// @import "project/_FONT";
+// @import "module/_ICON";
+// @import "project/_FontIcon";
 
 
-/*------------------------------------------------------------------------*\
-/*------------------------------------------------------------------------*\
+
+
 /*========================================================================*\
-		>	animation
+		>	skrollr
 \*========================================================================*/
-@import "project/_AuAnimation";
-
-
-
-
-
-// /*========================================================================*\
-// 		>	skrollr
-// \*========================================================================*/
 // @import "_skrollrFixedPos";
+
