--- a/sass/_CAROUSEL.scss
+++ b/sass/_CAROUSEL.scss
@@ -1,113 +1,220 @@
-#hcarousel {
-  width: 100%;
-  // min-height: 520px;
-  position: relative;
-  background: transparent;
+@charset "UTF-8";
+
+
+$slider-pb: (620 / 1920) * 100%;
+
+.banner {
+	position: relative;
+	height: 0;
+	padding-bottom: $slider-pb;
 }
 
-.h_carousel_controls {
-  // position: absolute;
-  // bottom:0;
-  width:100%;
-  height: 15px;
-  @include bg(lighten($normal_color, 5%));
-  border-bottom: 1px solid $Grey_color1;
-}
-
-.flexslider, .slides, .slides li {
+.banner, .flexslider, .slides, .slides li {
 	width: 100%;
 }
-.flexslider {
-	border: 0;
-	background-color: transparent;
-	border-radius: 0;
-	margin-bottom: 1em !important;
-	@include box-shadow(none);
+#slider {
+	overflow: hidden;
 	.slides {
-		width: 100%;
-		height: 0;
-		padding-bottom: 21.61%;
-		border-bottom: 1px solid #fff;
+		// width: 100%;
+		// height: 0;
+		// padding-bottom: $slider-pb;
 		&>li {
-			width: 100%;
-			height: 0;
-			padding-bottom: 21.61%;
-			background-size:cover;
-			background-position:50% 50%;
+			// width: 100%;
+			// height: 0;
+			// padding-bottom: $slider-pb;
+			// @include background-size(cover);
+			// background-position:50% 50%;
 		}
 	}
 }
-
-.flex-control-nav {
-  width: auto;
-  // bottom: auto;
-  // right: 118px;
-  bottom: -18px;
-  right: 0;
-  z-index:20;
-  position: absolute;
-  text-align: center;
-}
-.flex-direction-nav {
+//  方案二  Slider w/thumbnail controlNav pattern
+.flex-control-thumbs {
 	position: absolute;
-	bottom:20px;
+	left: 0;
 	right: 0;
+	bottom: 0;
+	width: $cnt_width;
+	height: 80px;
+	margin: auto;
+	@include bg(transparent);
 	li {
-		@include wh(46px);
-		float: left;
-	}
-	.flex-prev, .flex-next {
-		@include wh(41px);
-		display: inline-block;
-		// background: url('../images/iconTxt.png') no-repeat;
-		opacity: 1;
-		left: auto;
-		right: auto;
-		margin-top: -23px;
-	}
-	.flex-prev {
-		&:hover {
-			@include hover;
+		position: relative;
+		height: 70px;
+		margin: 0 5px;
+		&:before {
+			@include psudoClass;
+			position: absolute;
+			top: 0;
+			left: 0;
+			@include wh;
+			@include bg(rgba(#000, 0.6));
 		}
-	}
-	.flex-next {
-		background-position: -46px 0;
-		margin-left: 0;
-		&:hover {
-			@include hover;
-		}
-	}
-}
-
-.flex-control-paging {
-	li {
-
-		a {
-			// @include wh(11px);
-			@include circle(10px);
-			// background: rgba(#fff,0.5);
-			@include bg(#fff);
-			&.flex-active, &:hover {
-				// background: rgba(#fff799,1);
-				@include bg(#fff799);
-				@include box-shadow(1px 1px 3px darken($normal_color, 10%));
-				@include scale(1.1);
+		&.flex-active {
+			position: relative;
+			top: -5px;
+			&:before {
+				// @include opacity(0);
+				@include bg(transparent);
+				border: 3px solid #e60012;
 			}
 		}
 	}
 }
 
-.slides .well{
-  height:100%;
+
+//  方案一  Slider w/thumbnail slider
+#carousel {
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: $cnt_width;
+	height: 80px;
+	margin: auto;
+	@include bg(transparent);
+	.slides {
+		position: absolute;
+		bottom: 0;
+		&>li {
+			position: relative;
+			height: 70px;
+			margin: 0 5px;
+			@include bg(50%, 50%);
+			@include background-size(cover);
+			transition: all 0.3s ease(in-quart);
+			&:before {
+				@include psudoClass;
+				position: absolute;
+				top: 0;
+				left: 0;
+				@include wh;
+				@include bg(rgba(#000, 0.6));
+				transition: all 0.3s ease(in-quart);
+			}
+			&.flex-active-slide {
+				position: relative;
+				top: -5px;
+				&:before {
+					// @include opacity(0);
+					@include bg(transparent);
+					border: 3px solid #e60012;
+				}
+			}
+		}
+	}
+	.flex-viewport {
+		height: 100%;
+	}
 }
-.slidelink{
-  display:block;
-  width:100%;
-  height:100%;
-  position:relative;
+
+
+// #hcarousel {
+//   width: 100%;
+//   // min-height: 520px;
+//   position: relative;
+//   background: transparent;
+// }
+
+// .h_carousel_controls {
+//   // position: absolute;
+//   // bottom:0;
+//   width:100%;
+//   height: 15px;
+//   @include bg(lighten($normal_color, 5%));
+//   border-bottom: 1px solid $Grey_color1;
+// }
+
+.flexslider {
+	border: 0;
+	// background-color: transparent;
+	// border-radius: 0;
+	// margin-bottom: 1em !important;
+	// @include box-shadow(none);
+	// .slides {
+	// 	width: 100%;
+	// 	height: 0;
+	// 	padding-bottom: $pb;
+	// 	border-bottom: 1px solid #fff;
+	// 	&>li {
+	// 		width: 100%;
+	// 		height: 0;
+	// 		padding-bottom: $pb;
+	// 		background-size:cover;
+	// 		background-position:50% 50%;
+	// 	}
+	// }
 }
-.flexslider:hover .flex-prev,
-.flexslider:hover .flex-next {
-  opacity: 1;
-}
+
+// .flex-control-nav {
+//   width: auto;
+//   // bottom: auto;
+//   // right: 118px;
+//   bottom: -18px;
+//   right: 0;
+//   z-index:20;
+//   position: absolute;
+//   text-align: center;
+// }
+// .flex-direction-nav {
+// 	position: absolute;
+// 	bottom:20px;
+// 	right: 0;
+// 	li {
+// 		@include wh(46px);
+// 		float: left;
+// 	}
+// 	.flex-prev, .flex-next {
+// 		@include wh(41px);
+// 		display: inline-block;
+// 		// background: url('../images/iconTxt.png') no-repeat;
+// 		opacity: 1;
+// 		left: auto;
+// 		right: auto;
+// 		margin-top: -23px;
+// 	}
+// 	.flex-prev {
+// 		&:hover {
+// 			@include hover;
+// 		}
+// 	}
+// 	.flex-next {
+// 		background-position: -46px 0;
+// 		margin-left: 0;
+// 		&:hover {
+// 			@include hover;
+// 		}
+// 	}
+// }
+
+// .flex-control-paging {
+// 	li {
+
+// 		a {
+// 			// @include wh(11px);
+// 			@include circle(10px);
+// 			// background: rgba(#fff,0.5);
+// 			@include bg(#fff);
+// 			&.flex-active, &:hover {
+// 				// background: rgba(#fff799,1);
+// 				@include bg(#fff799);
+// 				@include box-shadow(1px 1px 3px darken($normal_color, 10%));
+// 				@include scale(1.1);
+// 			}
+// 		}
+// 	}
+// }
+
+// .slides .well{
+//   height:100%;
+// }
+// .slidelink{
+//   display:block;
+//   width:100%;
+//   height:100%;
+//   position:relative;
+// }
+// .flexslider:hover .flex-prev,
+// .flexslider:hover .flex-next {
+//   opacity: 1;
+// }
 
